--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,61 @@
 {
-  "name": "pure-react",
+  "name": "webpack-config-2019",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Modern webpack config",
+  "author": "abugleev",
+  "private": true,
   "scripts": {
-    "lint": "eslint \"**/*.{js,jsx}\"",
-    "dev": "parcel src/index.html",
-    "build": "parcel build --public-url ./dist --experimental-scope-hoisting src/index.html"
+    "webpack-dev-server": "webpack-dev-server",
+    "webpack": "webpack",
+    "dev": "cross-env NODE_ENV=development npm run webpack-dev-server -- --env.mode development --watch",
+    "prod": "cross-env NODE_ENV=production npm run webpack -- --env.mode production",
+    "prod:analyze": "npm run prod -- --env.presets analyze",
+    "prod:compress": "npm run prod -- --env.presets compress",
+    "debug": "node --inspect-brk ./src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.10.3"
+    "babel-loader": "^8.0.4",
+    "babel-plugin-named-asset-import": "^0.3.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "compression-webpack-plugin": "^2.0.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "dotenv": "^6.0.0",
+    "dotenv-expand": "^4.2.0",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "4.0.0-alpha.2",
+    "http-server": "^0.11.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.3.1",
+    "postcss-safe-parser": "^4.0.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "terser-webpack-plugin": "^1.1.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.19.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2",
+    "workbox-webpack-plugin": "^3.2.0"
   },
   "dependencies": {
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-regenerator-runtime": "^6.5.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.84.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-transform-runtime"     
-    ]
+    "node-sass": "^4.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
