--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pure-react",
+  "name": "chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm run dev --prefix ../client",
-    "client-install": "npm install --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "client": "yarn --cwd ../client dev",
+    "client-i": "yarn --cwd ../client",
+    "dev": "concurrently \"yarn server\" \"yarn client\" "
   },
   "keywords": [],
   "author": "",
