--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "webpack-dev-server": "webpack-dev-server",
+    "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "webpack": "webpack",
     "dev": "cross-env NODE_ENV=development npm run webpack-dev-server -- --env.mode development --watch",
     "prod": "cross-env NODE_ENV=production npm run webpack -- --env.mode production",
@@ -20,6 +21,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-named-asset-import": "^0.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
@@ -28,6 +30,12 @@
     "css-loader": "^2.1.0",
     "dotenv": "^6.0.0",
     "dotenv-expand": "^4.2.0",
+    "eslint": "^5.10.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -40,6 +48,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.3.1",
     "postcss-safe-parser": "^4.0.1",
+    "prettier": "^1.15.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "terser-webpack-plugin": "^1.1.0",
@@ -54,6 +63,7 @@
     "workbox-webpack-plugin": "^3.2.0"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
