WIP wrapping up UI part

--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "@reach/router": "^1.2.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-icons": "^3.4.0"
   }
 }
