--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,6 +8,7 @@
     "prettier/react"
   ],
   "rules": {
+    "no-console": "off",
     "react/prop-types": 1,
     "prettier/prettier": "error"
   },
