--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -2,21 +2,20 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "prettier",
-    "prettier/react"
+    "prettier"
   ],
   "rules": {
-    "react/prop-types": false
+    "no-console": "off",
+    "prettier/prettier": "error"
   },
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": [
+    "prettier",
+    "import"
+  ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
