--- a/server/package.json
+++ b/server/package.json
@@ -25,13 +25,14 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "nodemon": "^1.18.9",
-    "parcel-bundler": "^1.10.3",
     "prettier": "^1.15.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5"
   }
