--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,7 +9,8 @@
   ],
   "rules": {
     "no-console": "off",
-    "react/prop-types": 1,
+    "no-unused-vars": "warn",
+    "react/prop-types": 0,
     "prettier/prettier": "error"
   },
   "plugins": [
