--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "nodemailer": "^5.1.1",
