--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "prettier": "^1.15.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
@@ -38,8 +39,6 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
-    "mongoose": "^5.4.5",
-    "nodemailer": "^5.1.1",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "mongoose": "^5.4.5"
   }
 }
