--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,6 +10,7 @@
   "rules": {
     "no-console": "off",
     "no-unused-vars": "warn",
+    "jsx-a11y/heading-has-content": 0,
     "react/prop-types": 0,
     "prettier/prettier": "error"
   },
