--- a/client/package.json
+++ b/client/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^16.7.0",
     "react-icons": "^3.4.0",
     "react-loader-spinner": "^2.3.0",
-    "react-spinners": "^0.5.1"
+    "react-spinners": "^0.5.1",
+    "socket.io-client": "^2.2.0"
   }
 }
