--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
-    "mongoose": "^5.4.5"
+    "mongoose": "^5.4.5",
+    "socket.io": "^2.2.0"
   }
 }
