--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
