--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "client": "yarn --cwd ../client dev",
     "client-i": "yarn --cwd ../client",
     "dev": "concurrently \"yarn server\" \"yarn client\" "
