--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socketio-jwt": "^4.5.0"
   }
 }
