--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "@tanem/react-nprogress": "^1.0.15",
+    "date-fns": "^1.30.1",
     "formstate": "^1.0.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
