--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "socket.io": "^2.2.0",
+    "socket.io-stream": "^0.9.1",
     "socketio-jwt": "^4.5.0"
   }
 }
