--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "cron": "^1.7.0",
     "crypto": "^1.0.1",
     "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
@@ -41,8 +42,8 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
+    "rimraf": "^2.6.3",
     "socket.io": "^2.2.0",
-    "socket.io-stream": "^0.9.1",
     "socketio-jwt": "^4.5.0"
   }
 }
