--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "yarn --cwd ../client dev",
+    "client-prod": "yarn --cwd ../client prod",
     "client-i": "yarn --cwd ../client",
     "dev": "concurrently \"yarn server\" \"yarn client\" "
   },
