--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,15 +7,8 @@ RUN apt-get update && apt-get install -y curl apt-transport-https && \
   apt-get update && apt-get install -y yarn
 RUN mkdir /chat
 WORKDIR /chat
-COPY ./client/package.json ./client/package.json
-COPY ./client/yarn.lock ./client/yarn.lock
-COPY ./server/package.json ./server/package.json
-COPY ./server/yarn.lock ./server/yarn.lock  
-WORKDIR /chat/server
+COPY package.json ./package.json
+COPY yarn.lock ./yarn.lock  
 RUN yarn
-RUN yarn client-i
-WORKDIR /chat
 COPY . ./
-WORKDIR /chat/server
-RUN yarn client-prod
-
+CMD ["yarn", "server"]
