--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ script:
 after_success: 
   - docker build -t katbert/chat-nginx ./client  
   - docker build -t katbert/chat-nodejs ./server  
+branches:
+  only: 
+    - master  
