--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 sudo: required
 services:
   - docker
+branches:
+  only: 
+    - master       
 script:
   - echo "skipping tests"  
 after_success: 
   - docker build -t katbert/chat-nginx ./client  
   - docker build -t katbert/chat-nodejs ./server  
-branches:
-  only: 
-    - master  
+  - echo "DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push katbert/chat-nginx
+  - docker push katbert/chat-nodejs
