--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
 after_success: 
   - docker build -t katbert/chat-nginx ./client  
   - docker build -t katbert/chat-nodejs ./server  
-  - echo "DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push katbert/chat-nginx
   - docker push katbert/chat-nodejs
