--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "nodemon index.js",
     "client": "yarn --cwd ../client dev",
-    "dev": "concurrently \"yarn server\" \"yarn client\" "
+    "dev": "concurrently \"yarn server\" \"yarn client\" ",
+    "prod": "cross-env NODE_ENV=production NO_DOCKER=true yarn server"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "cron": "^1.7.0",
+    "cross-env": "^5.2.0",
     "crypto": "^1.0.1",
     "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
