--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -16,7 +16,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_pass http://nodejs:5555;   
   }
-  location /da_chat {
+  location /srv_chat {
     proxy_pass http://nodejs:5555;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
