--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,23 @@ services:
       - "8000:80"     
     depends_on:      
       - nodejs
+    volumes:
+      - html:/usr/share/nginx/html     
+      - vhost:/etc/nginx/vhost.d
+      - certs:/etc/nginx/certs:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: nginx-proxy-lets-encrypt
+    depends_on:
+      - "nginx"
+    volumes:
+      - certs:/etc/nginx/certs:rw
+      - vhost:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
+      - /var/run/docker.sock:/var/run/docker.sock:ro    
   nodejs:
     image: katbert/chat-server
     build: 
@@ -20,5 +37,9 @@ services:
       CLEAN_UPLOADS_DAYS: 10
       UPLOADS_DIR: uploads   
     restart: always   
- 
+volumes:
+  certs:
+  html:
+  vhost:
+   
     
