--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "cross-env": "^5.2.0",
     "crypto": "^1.0.1",
     "date-fns": "^1.30.1",
+    "dialogflow": "^0.8.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
@@ -44,6 +45,7 @@
     "mongoose": "^5.4.5",
     "rimraf": "^2.6.3",
     "socket.io": "^2.2.0",
-    "socketio-jwt": "^4.5.0"
+    "socketio-jwt": "^4.5.0",
+    "uuid": "^3.3.2"
   }
 }
