--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
-  listen 80; 
+  listen [::]:80;
+  listen 80;
 
   location / {
     root   /usr/share/nginx/html;
@@ -8,7 +9,7 @@ server {
   }
 
   
-  location /api {
+  location /api/* {
     rewrite /api/(.*) /$1 break;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
