--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ deploy:
   provider: elasticbeanstalk
   region: eu-north-1
   app: bugleev-chat
-  env: Dachat-env
+  env: fmlife-env
   bucket_name: elasticbeanstalk-eu-north-1-263451985759
-  bucket_path: da-chat
+  bucket_path: buybots-chat
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
