--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
+    "pb-util": "^0.1.0",
     "rimraf": "^2.6.3",
     "socket.io": "^2.2.0",
     "socketio-jwt": "^4.5.0",
